Added endpoint that generates notebook with opendap+xarray
